[package]
name = "proxy_printer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
anyhow = "1.0.75"

nix = { version = "0.27.1", features = ["socket", "net", "uio", "zerocopy"] }
socket2 = { version = "0.5.5", features = [] }
tokio = { version = "1.34.0", features = ["full"] }

tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "local-time"] }