[package]
name = "tcp_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive", "env"] }
anyhow = "1.0.75"
scopeguard = "1.2.0"

ppp = { version = "2.2.0" }
nix = { version = "0.27.1", features = ["socket", "net", "uio", "zerocopy"] }
socket2 = { version = "0.5.5", features = [] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-splice = "0.2.0"
tokio-rustls = {  version = "0.24.1", features = ["tls12"] }
rustls = { version = "0.21.10", features = ["tls12", "dangerous_configuration"] }
rustls-pemfile = {  version = "2.0.0", features = [] }
ktls = {  path = "ktls" }
serde = {  version = "1.0.196", features = ["derive"] }
serde_yaml = {  version = "0.9.31", features = [] }
duration-str = {  version = "0.7.1", features = [] }
nonempty = {  version = "0.9.0", features = ["serialize"] }
notify = { version = "6.1.1", features = [] }
parking_lot = "0.12.1"

tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "local-time"] }
tikv-jemallocator = "0.5"

[profile.release]
lto = "fat"
#panic = "abort"
codegen-units = 1
opt-level = 3
debug = 1
